; ModuleID = '/home/carl/AnghaBench/linux/fs/gfs2/extr_ops_fstype.c_gfs2_tune_init.c'
source_filename = "/home/carl/AnghaBench/linux/fs/gfs2/extr_ops_fstype.c_gfs2_tune_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gfs2_tune = type { i32, i32, i32, i32, i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gfs2_tune*)* @gfs2_tune_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gfs2_tune_init(%struct.gfs2_tune* %0) #0 {
  %2 = alloca %struct.gfs2_tune*, align 8
  store %struct.gfs2_tune* %0, %struct.gfs2_tune** %2, align 8
  %3 = load %struct.gfs2_tune*, %struct.gfs2_tune** %2, align 8
  %4 = getelementptr inbounds %struct.gfs2_tune, %struct.gfs2_tune* %3, i32 0, i32 6
  %5 = call i32 @spin_lock_init(i32* %4)
  %6 = load %struct.gfs2_tune*, %struct.gfs2_tune** %2, align 8
  %7 = getelementptr inbounds %struct.gfs2_tune, %struct.gfs2_tune* %6, i32 0, i32 0
  store i32 10, i32* %7, align 8
  %8 = load %struct.gfs2_tune*, %struct.gfs2_tune** %2, align 8
  %9 = getelementptr inbounds %struct.gfs2_tune, %struct.gfs2_tune* %8, i32 0, i32 1
  store i32 1, i32* %9, align 4
  %10 = load %struct.gfs2_tune*, %struct.gfs2_tune** %2, align 8
  %11 = getelementptr inbounds %struct.gfs2_tune, %struct.gfs2_tune* %10, i32 0, i32 2
  store i32 1, i32* %11, align 8
  %12 = load %struct.gfs2_tune*, %struct.gfs2_tune** %2, align 8
  %13 = getelementptr inbounds %struct.gfs2_tune, %struct.gfs2_tune* %12, i32 0, i32 5
  store i64 0, i64* %13, align 8
  %14 = call i32 @BIT(i32 18)
  %15 = load %struct.gfs2_tune*, %struct.gfs2_tune** %2, align 8
  %16 = getelementptr inbounds %struct.gfs2_tune, %struct.gfs2_tune* %15, i32 0, i32 4
  store i32 %14, i32* %16, align 8
  %17 = load %struct.gfs2_tune*, %struct.gfs2_tune** %2, align 8
  %18 = getelementptr inbounds %struct.gfs2_tune, %struct.gfs2_tune* %17, i32 0, i32 3
  store i32 10, i32* %18, align 4
  ret void
}

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
